# Modern-Cpp-Patterns

./: .gitignore  AI_VERIFICATION_SUMMARY.md  ANSWER_TO_YOUR_QUESTION.md  BUILD_INSTRUCTIONS.md  CLANG_TIDY_ANALYSIS.md  CMAKE_TEMPLATE.txt  CMakeLists.txt  COMPREHENSIVE_ANALYSIS_SUMMARY.md  CONCURRENCY_AND_PERFORMANCE_EXTENSION.md  CONTRIBUTING.md  COURSE_STRUCTURE_COMPLETE.md  COURSE_SUMMARY.md  CPP23_MIGRATION_GUIDE.md  CPP23_NEW_FEATURES_EXAMPLES.cpp  CPPCHECK_VALIDATION_REPORT.md  EXPLOITS_TEMPLATE.cpp  FINAL_COURSE_SUMMARY.md  FINAL_VALIDATION_SUMMARY.md  HEADER_TEMPLATE.txt  PATTERNS_IMPLEMENTATION_REPORT.md  README.md  SANITIZERS_ANALYSIS.md  SECURE_ALTERNATIVES_TEMPLATE.cpp  SECURITY_ANALYSIS_TEMPLATE.md  SECURITY_IMPLEMENTATION_REPORT.md  SECURITY_INTEGRATION_PLAN.md  SECURITY_STUBS_REPORT.md  TECH_DEBT_COMPLETION_REPORT.md  TECH_DEBT_TODO.md  VALIDATION_CHEATSHEET.md  VALIDATION_PLAN.md  VALIDATION_QUICKSTART.md  VALIDATION_RESULTS_INITIAL.md  VALIDATION_SUCCESS_REPORT.md  VALIDATION_SUMMARY_FOR_USER.md  VALIDATION_TODO.md  VULNERABILITIES_TEMPLATE.cpp  clang_tidy_report_20251012_003146.txt  clang_tidy_report_20251012_010418.txt  create_security_stubs.ps1  (+5 more)
01-basics/: CMakeLists.txt
01-basics/lesson_1_1_hello_world/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  hello_world.cpp  hello_world_vulnerabilities.cpp  modern_features.cpp  secure_hello_world_alternatives.cpp
01-basics/lesson_1_2_raii/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  raii_example.cpp  raii_vulnerabilities.cpp  resource_manager.cpp  secure_raii_alternatives.cpp
01-basics/lesson_1_3_smart_pointers/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md
01-basics/lesson_1_4_move_semantics/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  move_semantics_vulnerabilities.cpp
02-principles/: CMakeLists.txt
02-principles/lesson_2_1_solid/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  dip_example.cpp  isp_example.cpp  lsp_example.cpp  ocp_example.cpp  secure_solid_alternatives.cpp  solid_principles.cpp  solid_vulnerabilities.cpp  srp_example.cpp
02-principles/lesson_2_2_dry_kiss_yagni/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  dry_example.cpp  dry_kiss_yagni_vulnerabilities.cpp  kiss_example.cpp  principles_comparison.cpp  secure_dry_kiss_yagni_alternatives.cpp  yagni_example.cpp
02-principles/lesson_2_3_composition_inheritance/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  comparison_analysis.cpp  composition_example.cpp  composition_inheritance_vulnerabilities.cpp  inheritance_example.cpp  secure_composition_inheritance_alternatives.cpp
02-principles/lesson_2_4_dependency_injection/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  dependency_injection_vulnerabilities.cpp  di_basics.cpp  secure_dependency_injection_alternatives.cpp
03-creational/: CMakeLists.txt
03-creational/lesson_3_1_singleton/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  SECURITY_README.md  SINGLETON_SECURITY_POSTER.md  modern_singleton.cpp  secure_singleton_alternatives.cpp  singleton_cpp23_comparison.cpp  singleton_pattern.cpp  singleton_vulnerabilities.cpp
03-creational/lesson_3_2_factory_method/: CMakeLists.txt  FACTORY_METHOD_SECURITY_POSTER.md  README.md  SECURITY_ANALYSIS.md  factory_method.cpp  factory_method_cpp23_comparison.cpp  factory_method_vulnerabilities.cpp  product_factory.cpp  secure_factory_method_alternatives.cpp
03-creational/lesson_3_3_abstract_factory/: ABSTRACT_FACTORY_SECURITY_POSTER.md  CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  abstract_factory_cpp23_comparison.cpp  abstract_factory_vulnerabilities.cpp  secure_abstract_factory_alternatives.cpp
03-creational/lesson_3_4_builder/: BUILDER_SECURITY_POSTER.md  CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  builder_cpp23_comparison.cpp  builder_vulnerabilities.cpp  secure_builder_alternatives.cpp
04-structural/: CMakeLists.txt
04-structural/lesson_4_1_adapter/: ADAPTER_SECURITY_POSTER.md  CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  adapter_cpp23_comparison.cpp  adapter_pattern.cpp  adapter_vulnerabilities.cpp  modern_adapter.cpp  secure_adapter_alternatives.cpp
04-structural/lesson_4_2_decorator/: CMakeLists.txt  DECORATOR_SECURITY_POSTER.md  README.md  SECURITY_ANALYSIS.md  decorator_cpp23_comparison.cpp  decorator_vulnerabilities.cpp  secure_decorator_alternatives.cpp
04-structural/lesson_4_3_facade/: CMakeLists.txt  FACADE_SECURITY_POSTER.md  README.md  SECURITY_ANALYSIS.md  facade_cpp23_comparison.cpp  facade_vulnerabilities.cpp  secure_facade_alternatives.cpp
04-structural/lesson_4_4_proxy/: CMakeLists.txt  PROXY_SECURITY_POSTER.md  README.md  SECURITY_ANALYSIS.md  proxy_cpp23_comparison.cpp  proxy_vulnerabilities.cpp  secure_proxy_alternatives.cpp
05-behavioral/: CMakeLists.txt
05-behavioral/lesson_5_1_observer/: CMakeLists.txt  OBSERVER_SECURITY_POSTER.md  README.md  SECURITY_ANALYSIS.md  SECURITY_README.md  modern_observer.cpp  observer_cpp23_comparison.cpp  observer_pattern.cpp  observer_vulnerabilities.cpp  secure_observer_alternatives.cpp
05-behavioral/lesson_5_2_strategy/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  STRATEGY_SECURITY_POSTER.md  game_strategies.cpp  secure_strategy_alternatives.cpp  strategy_cpp23_comparison.cpp  strategy_pattern.cpp  strategy_vulnerabilities.cpp
05-behavioral/lesson_5_3_command/: CMakeLists.txt  COMMAND_SECURITY_POSTER.md  README.md  SECURITY_ANALYSIS.md  command_cpp23_comparison.cpp  command_pattern.cpp  command_vulnerabilities.cpp  secure_command_alternatives.cpp  undo_redo.cpp
05-behavioral/lesson_5_4_state/: CMakeLists.txt  README.md  SECURITY_ANALYSIS.md  STATE_SECURITY_POSTER.md  secure_state_alternatives.cpp  state_cpp23_comparison.cpp  state_vulnerabilities.cpp
06-modern-cpp/: CMakeLists.txt
06-modern-cpp/lesson_6_1_smart_pointers/: README.md  SECURITY_ANALYSIS.md  SMART_POINTERS_SECURITY_POSTER.md  memory_management.cpp  secure_smart_pointers_alternatives.cpp  smart_pointers.cpp  smart_pointers_cpp23_comparison.cpp  (+1 more)
07-concurrency/: CMakeLists.txt
08-high-load/: CMakeLists.txt
09-performance/: CMakeLists.txt
(+256 files in other folders)
